# parallel_project

./: CMakeLists.txt  Makefile  cloth_sim.cu  cloth_sim_cuda.cu  cloth_sim_openmp.cu  index.html
cudaCloth/: Makefile  cuda_pdb.cu  grid_pbd.cu  pdb.cu
